# crystallinium

./: .gitignore  README.md  pyproject.toml
src/crystallinium/: _custom_types.py  _version.py  asset_manager.py  assets.py  dirs.py  dummy.md  formatters.py  input.py  json_convertible.py  mdparser.py  text_utils.py
