[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crystallinium"
version = "0.1.0"
description = "Reusable core utilities for my projects"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Louis Masarei-Boulton" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
